--- a/recipes/templates/recipe/home.html
+++ b/recipes/templates/recipe/home.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>Recipes</h1>
+    <h1>HOME</h1>
     <div class="products">
         {% for product in products %}
             <div class="product">
